feat(yorkie) config git hooks

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "yorkie": "^2.0.0"
   },
   "eslintConfig": {
     "root": true,
@@ -44,5 +45,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "vue-cli-service lint && git add"
+  }
 }
